# input-mapper

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
schemas/: app_config.schema.json  input_config.schema.json
src/: App.css  App.tsx  commands.ts  schemas.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/screens/: Binding.tsx  BindingSet.tsx  Game.tsx  Screen.tsx
src/scripts/: build-schemas.ts
src/utils/: events.ts  humanize.ts  utils.ts
